--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -70,9 +70,7 @@
           </li>
           <h3 class="menu-title">{% trans 'Menu' %}</h3><!-- /.menu-title -->
           {%  if request.user.is_superuser or request.user.is_staff %}
-            <li><a href="{% url 'tracker:day_review_select' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Parte Diario' %}</a></li>
-          {% else %}
-            <li><a href="{% url 'tracker:log_hours' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Parte Diario' %}</a></li>
+            <li style="display:none;"><a href="{% url 'tracker:day_review_select' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Parte Diario' %}</a></li>
           {% endif %}
           <li><a href="{% url 'tracker:past_days' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Past Days' %}</a></li>
           <li><a href="{% url 'tracker:dht_report' request.user.username %}"><i class="menu-icon fa fa-table"></i>{% trans 'DHT General' %}</a></li>
